# crab-code

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  deny.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/acp/: Cargo.toml
crates/acp/src/: lib.rs  server.rs
crates/acp/src/protocol/: agent_info.rs  mod.rs  version.rs
crates/agent/: Cargo.toml
crates/agent/src/: auto_dream.rs  code_nav.rs  coordinator.rs  effort.rs  git_context.rs  lib.rs  memory_retriever.rs  message_bus.rs  pr_context.rs  prompt_suggestion.rs  query_loop.rs  runtime.rs  slash_commands.rs  smart_context.rs  stop_hooks.rs  summarizer.rs  system_prompt.rs  task.rs  tips.rs  token_budget.rs  worker.rs
crates/agent/src/coordinator/: manager.rs  mod.rs  permission_sync.rs  session.rs
crates/agent/src/engine/: mod.rs  tool_orchestration.rs
crates/agent/src/error_recovery/: circuit.rs  degradation.rs  strategy.rs
crates/agent/src/session/: runtime.rs  session_config.rs
crates/agent/src/slash_commands/: handlers.rs  mod.rs  types.rs
crates/agent/src/system_prompt/: builder.rs  mod.rs  (+1 more)
crates/agent/tests/: integration_m7b.rs
crates/agents/src/: lib.rs  llm_compaction_client.rs  mcp_skills.rs  runtime.rs
crates/agents/tests/: integration_m7b.rs
crates/api/: Cargo.toml
crates/api/src/: ab_compare.rs  anti_track.rs  bedrock.rs  cache.rs  error.rs  lib.rs  rate_limit.rs  response_scorer.rs  retry_strategy.rs  stream_aggregator.rs  streaming.rs  token_estimation.rs  types.rs  vertex.rs
crates/auth/src/: api_key.rs  aws_iam.rs  credential_chain.rs  error.rs  keychain.rs  lib.rs  oauth.rs  resolver.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  protocol.rs  remote_bridge.rs  repl_bridge.rs  session_token.rs  trusted_device.rs  types.rs  ws_server.rs
crates/cli/: Cargo.toml
crates/cli/src/: acp_mode.rs  agent.rs  main.rs  output.rs  setup.rs
crates/common/src/: debug.rs
crates/config/: Cargo.toml
crates/config/assets/: config.schema.json
crates/config/examples/: gen-schema.rs
crates/config/src/: agents_md.rs  change_detector.rs  completion.rs  config.rs  config_toml.rs  crab_md.rs  feature_flag.rs  gitignore.rs  glob_matcher.rs  global_state.rs  hooks.rs  hot_reload.rs  keybinding.rs  lib.rs  loader.rs  merge.rs  permission_inherit.rs  permission_rules.rs  permissions.rs  plugin_loader.rs  plugin_registry.rs  policy.rs  profile.rs  runtime.rs  schema_gen.rs  settings.rs  settings_cache.rs  validation.rs  writer.rs
crates/config/tests/: plugin_loader_spec.rs  schema_spec.rs  writer_spec.rs
crates/core/src/: bridge.rs  conversation.rs  event.rs  event_bus.rs  event_filter.rs  ide.rs  lib.rs  model.rs  permission.rs  proactive.rs  query.rs  remote.rs  sandbox.rs  tool.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: protocol.rs  server.rs  session_pool.rs
crates/engine/: Cargo.toml
crates/engine/src/: effort.rs  lib.rs  loop.rs  stop_hooks.rs  streaming.rs  token_budget.rs  tool_orchestration.rs
crates/fs/: Cargo.toml
crates/fs/src/: diff.rs  file_stats.rs  gitignore.rs  glob.rs  grep.rs  incremental_hash.rs  lib.rs  project_detect.rs  watch.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: frontmatter.rs  lib.rs  registry.rs  types.rs  watcher.rs
crates/hooks/src/builtin/: file_access.rs  mod.rs
crates/ide/: Cargo.toml
crates/ide/src/: client.rs  injection.rs  lockfile.rs  notifications.rs
crates/job/: Cargo.toml
crates/job/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  capability.rs  channel_permissions.rs  client.rs  discovery.rs  elicitation.rs  env_expansion.rs  lib.rs  manager.rs  normalization.rs  official_registry.rs  progress.rs  protocol.rs  server.rs  sse_server.rs  tool_chain.rs  tool_group.rs  tool_version.rs
crates/memory/: Cargo.toml
crates/memory/src/: age.rs  index.rs  lib.rs  paths.rs  relevance.rs  team.rs  types.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: bundled_skills.rs  frontmatter_hooks.rs  hook.rs  hook_types.rs  hook_watchers.rs  lib.rs  manager.rs  manifest.rs  skill.rs  skill_builder.rs  wasm_runtime.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs  pty.rs  sandbox.rs  spawn.rs  tree.rs
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs
crates/remote/src/client/: config.rs  error.rs  mod.rs
crates/remote/src/protocol/: handshake.rs  meta.rs  mod.rs
crates/remote/src/server/: dispatch.rs  handler.rs  listener.rs  mod.rs
crates/remote/tests/: client_roundtrip.rs  e2e.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  policy.rs  traits.rs
crates/sandbox/src/backend/: factory.rs  landlock.rs  mod.rs  noop.rs  windows.rs
crates/session/: Cargo.toml
crates/session/src/: auto_compact.rs  compaction.rs  context.rs  conversation.rs  cost.rs  file_history.rs  history.rs  input_expand.rs  lib.rs  llm_compaction_client.rs  memory.rs  memory_extract.rs  migration.rs  snip_compact.rs  tag.rs  template.rs
crates/skill/: Cargo.toml
crates/skill/src/: builder.rs  frontmatter.rs  lib.rs  matcher.rs  registry.rs  types.rs
crates/skills/: Cargo.toml
crates/skills/src/: builder.rs  lib.rs  matcher.rs  mcp.rs  registry.rs  types.rs
crates/skills/src/builtin/: commit.rs  debug.rs  loop_skill.rs  mod.rs  remember.rs  review_pr.rs  schedule.rs  simplify.rs  stuck.rs  update_config.rs  verify.rs
crates/swarm/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry/src/: export.rs  lib.rs  metrics.rs  tracer.rs
crates/tools/: Cargo.toml
crates/tools/src/: executor.rs  lib.rs  permission.rs  registry.rs  sandbox.rs  schema.rs  str_utils.rs  tool_use_summary.rs
crates/tools/tests/: integration_m3.rs
crates/tui/: Cargo.toml
crates/tui/src/: action.rs  app.rs  app_event.rs  changelog.rs  clipboard.rs  command_queue.rs  event.rs  event_broker.rs  frame_requester.rs  hyperlink.rs  keybindings.rs  layout.rs  lib.rs  overlay.rs  runner.rs  terminal_notify.rs  theme.rs  traits.rs  watcher.rs
docs/: CHANGELOG.md  architecture.md  config.md
(+261 files in other folders)
