[package]
name = "crab-job"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified job scheduling — one-shot / interval / cron — for crab subsystems"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
# serde (Job / JobHandle ids, persisted state)
serde.workspace = true
serde_json.workspace = true
# scheduling
tokio.workspace = true
croner.workspace = true
# diagnostics
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
