[package]
name = "crab-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for Crab Code"

[dependencies]
crab-core.workspace = true
crab-config.workspace = true
crab-mcp.workspace = true
crab-process.workspace = true
crab-skill.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
wat.workspace = true

[features]
default = []
wasm = ["wasmtime"]

[lints]
workspace = true
