[package]
name = "crab-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "crab-proto — remote-control protocol (server + client + wire types)"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-auth.workspace = true
# protocol / serde
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
# server side
axum = { workspace = true }
futures.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
jsonwebtoken.workspace = true
# client side
reqwest.workspace = true
# shared
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []

[dev-dependencies]
# Integration tests under `tests/` already transitively get the above
# crates via the main `[dependencies]` block, but listing them as
# dev-dependencies makes the intent explicit and survives a future
# tightening of the main deps.
tokio-tungstenite.workspace = true
futures.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
